// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog - Snapshots > matched snapshot for DialogContent with default props 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
    data-testid="dialog-content"
  >
    <div>
      Dialog Content
    </div>
    <button
      class="absolute right-4 top-4 w-8 h-8 inline-flex items-center justify-center whitespace-nowrap text-sm transition-all duration-300 ease-in-out disabled:pointer-events-none disabled:opacity-50 bg-secondary text-secondary-foreground hover:bg-secondary/80 rounded-full cursor-pointer"
      data-testid="dialog-close"
    >
      <div
        class="h-4 w-4 text-secondary-foreground opacity-70"
        data-testid="x-icon"
      >
        X
      </div>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for Dialog with default props 1`] = `
<div
  data-testid="dialog-root"
>
  <div>
    Dialog Content
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogContent with close button 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
    data-testid="dialog-content"
  >
    <div>
      Dialog Content
    </div>
    <button
      class="absolute right-4 top-4 w-8 h-8 inline-flex items-center justify-center whitespace-nowrap text-sm transition-all duration-300 ease-in-out disabled:pointer-events-none disabled:opacity-50 bg-secondary text-secondary-foreground hover:bg-secondary/80 rounded-full cursor-pointer"
      data-testid="dialog-close"
    >
      <div
        class="h-4 w-4 text-secondary-foreground opacity-70"
        data-testid="x-icon"
      >
        X
      </div>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogContent without close button 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
    data-testid="dialog-content"
  >
    <div>
      Dialog Content
    </div>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogFooter 1`] = `
<div
  class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
  data-slot="dialog-footer"
>
  <button>
    Cancel
  </button>
  <button>
    OK
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogHeader 1`] = `
<div
  class="flex flex-col gap-2 text-center sm:text-left"
  data-slot="dialog-header"
  data-testid="dialog-header"
>
  <h2
    class="self-stretch justify-start text-base-foreground text-2xl font-bold leading-loose undefined"
    data-testid="dialog-title"
  >
    Dialog Title
  </h2>
  <p
    class="text-muted-foreground text-sm"
    data-testid="dialog-description"
  >
    Dialog Description
  </p>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogTrigger with asChild 1`] = `
<div
  data-as-child="true"
  data-testid="dialog-trigger"
>
  <button>
    Open Dialog
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogTrigger with default props 1`] = `
<div
  data-testid="dialog-trigger"
>
  <button>
    Open Dialog
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for complete dialog structure 1`] = `
<div
  data-testid="dialog-root"
>
  <div
    data-testid="dialog-trigger"
  >
    <button>
      Open Dialog
    </button>
  </div>
  <div
    data-testid="dialog-portal"
  >
    <div
      class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
      data-testid="dialog-overlay"
    />
    <div
      class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
      data-testid="dialog-content"
    >
      <div
        class="flex flex-col gap-2 text-center sm:text-left"
        data-slot="dialog-header"
        data-testid="dialog-header"
      >
        <h2
          class="self-stretch justify-start text-base-foreground text-2xl font-bold leading-loose undefined"
          data-testid="dialog-title"
        >
          Dialog Title
        </h2>
        <p
          class="text-muted-foreground text-sm"
          data-testid="dialog-description"
        >
          Dialog Description
        </p>
      </div>
      <div>
        Dialog body content
      </div>
      <div
        class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
        data-slot="dialog-footer"
      >
        <button>
          Cancel
        </button>
        <button>
          OK
        </button>
      </div>
      <button
        class="absolute right-4 top-4 w-8 h-8 inline-flex items-center justify-center whitespace-nowrap text-sm transition-all duration-300 ease-in-out disabled:pointer-events-none disabled:opacity-50 bg-secondary text-secondary-foreground hover:bg-secondary/80 rounded-full cursor-pointer"
        data-testid="dialog-close"
      >
        <div
          class="h-4 w-4 text-secondary-foreground opacity-70"
          data-testid="x-icon"
        >
          X
        </div>
        <span
          class="sr-only"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;
